# Dating-Telegram-Bot-Webapp-2.0

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/application/api/: lifespan.py  main.py  schemas.py
app/application/api/dependencies/: conteiners.py
app/application/api/v1/: urls.py
app/bot/: main.py
app/bot/callbacks/: setup.py
app/bot/callbacks/users/: likes.py  profile_edit.py
app/bot/handlers/: setup.py  start.py
app/bot/handlers/user/: registration.py  start.py
app/bot/handlers/users/: profile.py  profile_edit.py  registration.py  start.py
app/bot/keyboards/: inline.py  reply.py
app/bot/utils/: constants.py  notificator.py  states.py
app/domain/entities/: base.py  likes.py  users.py
app/domain/exceptions/: base.py  likes.py  users.py
app/domain/values/: base.py  likes.py  users.py
app/infra/repositories/: base.py  converters.py  memory.py  mongo.py
app/infra/repositories/filters/: users.py
app/infra/s3/: base.py  storage.py
app/logic/: init.py
app/logic/exceptions/: base.py  likes.py  user.py
app/logic/services/: base.py  likes.py  services.py  users.py
app/settings/: config.py  logger.py
app/settings/configs/: bot.py
app/tests/: conftest.py  fixtures.py
app/tests/logic/: conftest.py  test_likes.py  test_users.py
docker_compose/: app.yaml  frontend.yaml  storages.yaml
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: LikeButton.tsx  api.tsx  card_about.tsx
(+11 files in other folders)
